@@ -1,0 +1,5 @@
+# change mtime in a zip archive
+program modify
+return 0
+args testfile set_mtime 0 1407272201
+file testfile testfile.zip testfile2014.zip
